--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "final-project",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.1"
+    "next": "14.0.1",
+    "react": "18.2.0 ",
+    "react-dom": "18.2.0 ",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5"
   }
 }
